# HFR-project

./: README.md  pyproject.toml  requirements.txt
HFR_project/: __main__.py  cli.py  config_backup.ini  configuration.ini  core.py  core_backup.py  core_plot.py  core_plot_backup.py  hfr_validation.py  hfr_validation_1.py  hfr_validation_MTO.py  hfr_validation_OTM.py  hfr_validation_OTM_backup.py  zapata.py
HFR_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
