# pyproject.toml

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HFR_project"
version = "0.0.1"
description = "CLI model validation application against high-frequency radars"
readme = "README.md"
authors = [{ name = "Giurato Michele", email = "michele.giurato@cmcc.it" }]

[project.scripts]
HFR_project = "HFR_project.__main__:main"